# jpm_okoa_rent_restful

./: .env  Cargo.toml  README.md  main.rs
apis/: processussdactions.md
sql/: 0_create_database.sql
src/: api_layer.rs  db_layer.rs  main.rs
