[package]
name = "okoa_rent_restful"
version = "0.1.0"
authors = ["lastemp <emmanuelochieng797@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "3"
#actix-web = { version = "3.0", features = ["rustls"] }
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
base64 = "0.13.0"
mysql = "20.1.0"
#awc = "2.0.3"
#actix-rt = "2.6.0"
#openssl-sys = "0.9"
#openssl = "0.10"
#reqwest = "0.11.9"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }