[package]
name = "okoa_rent_restful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.105"
base64 = "0.21.2"
mysql = "24.0.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
tokio = "1.28.2"
dotenv = "0.15.0"